# framework

./: Dockerfile  README.md  deny.toml  docker-compose.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  project.rs
crates/cli/src/commands/: add.rs  build.rs  check.rs  dev.rs  inspect.rs  make.rs  mod.rs  new.rs  pkg.rs  run.rs  test.rs
crates/framework/: Cargo.toml
crates/framework/src/: lib.rs  path.rs  query_log.rs  server_async.rs
crates/framework/src/app/: container.rs  mod.rs  provider.rs  shutdown.rs
crates/framework/src/auth/: jwt.rs  mod.rs
crates/framework/src/cache/: mod.rs  redis.rs
crates/framework/src/cli/: command.rs  exit.rs  input.rs  kernel.rs  mod.rs  output.rs
crates/framework/src/collection/: mod.rs
crates/framework/src/config/: mod.rs
crates/framework/src/contract/: mod.rs
crates/framework/src/controller/: mod.rs
crates/framework/src/controllers/: defaults.rs  mod.rs
crates/framework/src/csrf/: mod.rs
crates/framework/src/db/: builtin.rs  factory.rs  mod.rs  query_log.rs
crates/framework/src/debug/: mod.rs
crates/framework/src/domain/: mod.rs  provider.rs  rule.rs
crates/framework/src/encryption/: aes.rs  mod.rs  xor.rs
crates/framework/src/entities/: mod.rs
crates/framework/src/entity/: mod.rs
crates/framework/src/env/: mod.rs
crates/framework/src/error/: mod.rs
crates/framework/src/errors/: mod.rs
crates/framework/src/events/: mod.rs
crates/framework/src/filesystem/: dir.rs  file.rs  info.rs  mod.rs  path.rs  temp.rs
crates/framework/src/fs/: mod.rs
crates/framework/src/gem/: binding.rs  mod.rs  validator.rs
crates/framework/src/http/: client.rs  form_request.rs  mod.rs  uploads.rs
crates/framework/src/lang/: mod.rs
crates/framework/src/localization/: json.rs  mod.rs
crates/framework/src/log/: mod.rs
crates/framework/src/mail/: array.rs  log.rs  mod.rs  smtp.rs
crates/framework/src/middleware/: auth.rs  cors.rs  error_page.rs  health.rs  mod.rs  panic.rs  rate_limit.rs  request_id.rs  static_files.rs  timeout.rs
crates/framework/src/model/: mod.rs
crates/framework/src/models/: mod.rs
crates/framework/src/module/: mod.rs
crates/framework/src/notif/: mod.rs
crates/framework/src/notification/: mod.rs
crates/framework/src/orm/: mod.rs
crates/framework/src/page/: mod.rs
crates/framework/src/pagination/: mod.rs
crates/framework/src/queue/: database.rs  mod.rs
crates/framework/src/rate/: mod.rs
crates/framework/src/rate_limit/: mod.rs  token_bucket.rs
crates/framework/src/repositories/: default.rs  mod.rs
crates/framework/src/repository/: mod.rs
crates/framework/src/route/: mod.rs  provider.rs
crates/framework/src/schedule/: mod.rs
crates/framework/src/semver/: compat.rs  constraint.rs  mod.rs  version.rs
crates/framework/src/server/: async_server.rs  mod.rs  server.rs
crates/framework/src/service/: mod.rs
crates/framework/src/services/: mod.rs
crates/framework/src/services/contracts/: mod.rs
crates/framework/src/session/: mod.rs
crates/framework/src/storage/: mod.rs
crates/framework/src/support/: hash.rs  mod.rs  str.rs  url.rs
crates/framework/src/testing/: mod.rs  test_client.rs
crates/framework/src/validator/: mod.rs
crates/framework/src/validators/: mod.rs
crates/framework/src/ws/: base64.rs  frame.rs  mod.rs  sha1.rs
crates/framework/tests/: integration.rs  middleware_test.rs
crates/macros/: Cargo.toml
crates/macros/src/: domain_attr.rs  lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs  validator.rs
crates/tui/src/prompts/: confirm.rs  mod.rs  password.rs  select.rs  text.rs
crates/tui/src/styling/: mod.rs
crates/viontin/: Cargo.toml
crates/viontin/src/: inline_macros.rs  lib.rs
crates/viontin/src/boot/: mod.rs
