[package]
name = "viontin-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "[EXPERIMENTAL] Viontin CLI — dogfooding viontin-tui and viontin-framework"

[[bin]]
name = "viontin"
path = "src/main.rs"

[dependencies]
viontin-tui = { path = "../tui", features = ["prompts"] }
viontin-framework = { path = "../framework" }
viontest = { path = "../../../viontest" }
notify = "4"
regex = "1"
