[package]
name = "viontin-framework"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "[EXPERIMENTAL] Viontin Framework — runtime implementations and all shared types"

[dependencies]
viontin-core = { path = "../../../viontin/crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
viontest = { path = "../../../viontest/crates/viontest" }
tokio = { version = "1", features = ["net", "rt", "io-util", "sync"], optional = true }
viontin-orm = { path = "../../../orm/crates/orm", optional = true }
ureq = { version = "2", features = ["json"], optional = true }
ctrlc = { version = "3", optional = true }
aes-gcm = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
async = ["tokio"]
domain = []
orm = ["viontin-orm"]
http-client = ["ureq"]
shutdown = ["ctrlc"]
aes = ["aes-gcm", "sha2"]
default = []
