[package]
name = "viontin-framework"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "[EXPERIMENTAL] Viontin Framework — runtime implementations and all shared types"

[dependencies]
linkme = "0.3.36"
viontin-core = { path = "../../../viontin/crates/core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
glob = "0.3.3"
viontest = { path = "../../../viontest/crates/viontest" }
tokio = { version = "1.52.3", features = ["net", "rt", "io-util", "sync"], optional = true }
viontin-orm = { path = "../../../orm/crates/orm" }
ureq = { version = "3.3", features = ["json"], optional = true }
ctrlc = { version = "3.5", optional = true }
aes-gcm = { version = "0.10.3", optional = true }
sha2 = { version = "0.11", optional = true }
bcrypt = "0.19"
lettre = { version = "0.11.22", optional = true, default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }

[features]
async = ["tokio"]
domain = []
http-client = ["ureq"]
shutdown = ["ctrlc"]
aes = ["aes-gcm", "sha2"]
smtp = ["lettre"]
default = []
