[package]
name = "viontin-macros"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "[EXPERIMENTAL] Proc-macros for Viontin Framework — #[domain], domain events, scaffolding"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
